--- a/wanderergathering.html
+++ b/wanderergathering.html
@@ -6,7 +6,7 @@
 <title>wanderergathing 漫游者集会</title>
 <link rel="stylesheet" type="text/css" href="default_setting.css" media="all">
 <link rel="stylesheet" type="text/css" href="wanderergathering.css" media="all">
-<link rel="stylesheet" type="text/css" href="..\font\icomoon\style.css" media="all">
+<link rel="stylesheet" type="text/css" href="font\icomoon\style.css" media="all">
 </head>
 <body> 
 <canvas id="sky"></canvas> 
