移动端适应

--- a/wanderergathering.html
+++ b/wanderergathering.html
@@ -13,7 +13,7 @@
 <header>
 <nav>
 <ul class="h_menu ">
-	<a href="wanderergathering.html" title="游宫"><li class="icon-home" alt="游宫"></li></a>
+	<a href="index.html" title="游宫"><li class="icon-home" alt="游宫"></li></a>
 	<li class="icon-keyboard" alt="黑阁"></li>
 	<li class="icon-music" alt="音亭"></li>
 	<li class="icon-quill" alt="画轩"></li>
@@ -24,7 +24,7 @@
 </nav>
 </header>
 <div class="blog_info">
-<a href="wanderergathering.html">wanderergathering </br> 漫游者集会</a>
+<a href="index.html">wanderergathering </br> 漫游者集会</a>
 <p class="way">人生苦短，漫漫且行</p>
 <p class="articles">近期文章</p>
 <nav>
