移动端适应

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <div class="clear"></div>
 </nav>
 </header>
+<div class="page">
 <div class="blog_info">
 <a href="index.html">wanderergathering </br> 漫游者集会</a>
 <p class="way">人生苦短，漫漫且行</p>
@@ -33,6 +34,7 @@
 <div class="content">
 <div class="title">
 文章主题
+</div>
 </div>
 </div>
 <script src="wanderergathering.js"></script>
