--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <!-- No, do not rummage here, no secrets. -->
-
-<html>
+<html lang="zh-cn">
 <head>
 <title>wanderergathing 漫游者集会</title>
-<link rel="stylesheet" type="text/css" href="default_setting.css" media="all">
-<link rel="stylesheet" type="text/css" href="wanderergathering.css" media="all">
-<link rel="stylesheet" type="text/css" href="font\icomoon\style.css" media="all">
+<meta charset="UTF-8">
+<meta name="description" content="wanderergathering 漫游者集会" />
+<meta name="author" content="secondsleep" />
+<link rel="stylesheet" type="text/css" href="default_setting.css" media="all" />
+<link rel="stylesheet" type="text/css" href="font\icomoon\style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="wanderergathering.css" media="all" />
 </head>
 <body> 
 <canvas id="sky"></canvas> 
 <header>
-<nav>
-<ul class="h_menu ">
-	<a href="index.html" title="游宫"><li class="icon-home" alt="游宫"></li></a>
-	<li class="icon-keyboard" alt="黑阁"></li>
-	<li class="icon-music" alt="音亭"></li>
-	<li class="icon-quill" alt="画轩"></li>
-	<li class="icon-books" alt="墨斋"></li>
-	<li class="icon-camera" alt="铭居"></li>
+<nav id="h_nav">
+<a class="icon-circle-right h" id="n_nav" href="#h_nav" title="收起"></a>
+<a class="icon-circle-right h" id="a_nav" href="#" title="展开"></a>
+<ul class="h_menu">
+	<li><a class="icon-home" href="wanderergathering.html" title="游宫"></a></li>
+	<li><a class="icon-keyboard" href="#" alt="黑阁"></a></li>
+	<li><a class="icon-music" href="#" alt="音亭"></a></li>
+	<li><a class="icon-quill" href="#" alt="画轩"></a></li>
+	<li><a class="icon-books" href="#" alt="墨斋"></a></li>
+	<li><a class="icon-camera" href="#" alt="铭居"></a></li>
 </ul>
-<div class="clear"></div>
 </nav>
+<div class="clear"></div>
 </header>
-<div class="page">
 <div class="blog_info">
-<a href="index.html">wanderergathering </br> 漫游者集会</a>
+<a href="wanderergathering.html">wanderergathering </br> 漫游者集会</a>
 <p class="way">人生苦短，漫漫且行</p>
 <p class="articles">近期文章</p>
-<nav>
+<nav class="article">
 </nav>
 </div>
 <div class="content">
 <div class="title">
 文章主题
-</div>
 </div>
 </div>
 <script src="wanderergathering.js"></script>
