--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a class="icon-circle-right h" id="a_nav" href="#h_nav" title="展开"></a>
 			<ul class="h_menu">
 				<li><a class="icon-home" href="index.html" title="游宫"></a></li>
-				<li><a class="icon-keyboard" href="#" alt="黑阁"></a></li>
+				<li><a class="icon-keyboard" href="static/reference.html" alt="黑阁"></a></li>
 				<li><a class="icon-music" href="#" alt="音亭"></a></li>
 				<li><a class="icon-quill" href="#" alt="画轩"></a></li>
 				<li><a class="icon-books" href="#" alt="墨斋"></a></li>
